fixed fb widgets layout problem when logged in as page

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -172,6 +172,7 @@ div.notice {
     padding:0;
     margin:0 auto 15px;
     width:300px;
+    height:250px;
     overflow:hidden;
     clear:both;
     text-align: left;
@@ -263,22 +264,21 @@ ul.dropdown ul li a:hover			{ background-color:#d98825;border:1px solid #f7e4cd;
 	padding:2px 0 2px 5px; /*snap widget iframe has extra padding on the right so we need to offset it */
 	border:1px solid black;
 }
-#lb2 {
-	width:345px;
-}
+#lb2 { text-align:left;margin-left:20px; }
+#lb2 div.fb-like-box{ background-color:#151515;text-align: left;margin-left:13px;}
 #lb3 {
 	float:right;
 	width:140px;
 	padding:2px 0 2px 5px; /*snap widget iframe has extra padding on the right so we need to offset it */
 	border:1px solid black;
 }
-#lb1, #lb2, #lb3 {
+#lb1, #lb3 {
 	text-align:center;
 	margin: 0 auto;
 	display:inline;
 	background-color:#232323;
 }
-#lb1 p, #lb2 p, #lb3 p{
+#lb1 p, #lb3 p{
 	color:#999;
 	font-size:10px;
 	font-weight:bold;
